--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "yarn json-server --watch db.json --port 1234"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.12.0",
+    "axios": "^1.1.3",
+    "formik": "^2.2.9",
     "iconsax-react": "^0.0.8",
     "json-server": "^0.17.0",
     "localforage": "^1.10.0",
@@ -19,17 +23,14 @@
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.2",
     "sort-by": "^1.2.0",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.3",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^2.1.0",
-    "autoprefixer": "^10.4.12",
-    "postcss": "^8.4.18",
-    "tailwindcss": "^3.1.8",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
   }
