--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@tanstack/react-query": "^4.12.0",
     "axios": "^1.1.3",
+    "date-fns": "^2.28.0",
+    "date-fns-tz": "^1.3.5",
     "formik": "^2.2.9",
     "iconsax-react": "^0.0.8",
     "json-server": "^0.17.0",
@@ -22,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.2",
+    "react-select": "^5.5.4",
     "sort-by": "^1.2.0",
     "styled-components": "^5.3.6",
     "yup": "^0.32.11"
