--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.2",
     "react-select": "^5.5.4",
+    "react-toastify": "^9.0.8",
     "sort-by": "^1.2.0",
     "styled-components": "^5.3.6",
     "yup": "^0.32.11"
